*Empty MediaWiki Message*

--- a/Grunnegs_A.mw
+++ b/Grunnegs_A.mw
@@ -12,7 +12,7 @@
 **Aaierproem (dikke pruim)'
 **Aailoof (klimop, lett. eierblad)
 *'''Nederlaands''': ei
-*'''Heerkomst''': van t Proto-Germoanse ''ajjam'', meugelk van t Proto-Indo-Uropese ''ōwyóm''.
+*'''Heerkomst''': van t Proto-Germoanse 'ajjam', meugelk van t Proto-Indo-Uropese 'ōwyóm'.
 *'''Vervougen''':
 
 ===Betaikenis 2===
@@ -21,7 +21,7 @@
 *'''Aander meugelkheden''': 
 *'''Ôfgelaaide woorden''': 
 *'''Nederlaands''': teelbal
-*'''Heerkomst''': van t Proto-Germoanse ''ajjam'', van t Proto-Indo-Uropese ''ōwyóm''.
+*'''Heerkomst''': van t Proto-Germoanse 'ajjam', van t Proto-Indo-Uropese 'ōwyóm'.
 *'''Vervougen''':
 
 ===Betaikenis 3===
@@ -32,7 +32,7 @@
 **aailaand (eiland)
 **Nördenaai (Nordeney, waddeneiland in de landkreis Aurich)
 *'''Nederlaands''': oog (oude geografische naam voor eiland; vergelijk Schiermonnik'''oog''', Jers'''ey''' en '''ei'''land)
-*'''Heerkomst''': van t Proto-Germoanse ''awjō'', van t Proto-Indo-Uropese ''əkʷā-''
+*'''Heerkomst''': van t Proto-Germoanse 'awjō', van t Proto-Indo-Uropese 'əkʷā-'
 *'''Vervougen''':
 
 ==Aaiber==
@@ -49,16 +49,16 @@
 
 == Aaid ==
 ===Betaikenis 1===
-*'''Oetsproak''': /aɪt/
+*'''Oetsproak''': /aːɪt/ of /ɒːɪt/
 *'''Meervold''': -
 *'''Aander meugelkheden''': aaltied, aaltieds, immer (as man over t verleden proat)
 *'''Ôfgelaaide woorden''': aaids (altijd maar weer)
 *'''Nederlaands''': altijd
-*'''Heerkomst''': Van ''aal'' en ''tied''
+*'''Heerkomst''': Van 'aal' en 'tied'
 *'''Vervougen''':
 
 ===Betaikenis 2===
-*'''Oetsproak''': /aɪt/
+*'''Oetsproak''': /aːɪt/ of /ɒːɪt/
 *'''Meervold''': 
 **aaider (oldmoods)
 **aaiden (nijmoods)
@@ -75,7 +75,7 @@
 *'''Aander meugelkheden''': 
 *'''Ôfgelaaide woorden''': 
 *'''Nederlaands''': eiland
-*'''Heerkomst''': Van ''aai'' en ''laand''
+*'''Heerkomst''': Van 'aai' en 'laand'
 *'''Vervougen''':
 
 ===Betaikenis 2===
@@ -86,7 +86,7 @@
 **Aailaander (inwoner van het eiland Schiermonnikoog)
 **Aailaanders (dialect van Schiermonnikoog; inwoners van het eiland Schiermonnikoog)
 *'''Nederlaands''': Schiermonnikoog (bijnaam)
-*'''Heerkomst''': Van 'aailaand'' (eiland). Schiermonnikoog ligt boven Groningen en was in het verleden, naast Borkum, het enige waddeneiland dat frequent door Groningers werd bezocht, waardoor het de koosnaam 'os aailaand' (ons eiland) kreeg.
+*'''Heerkomst''': Van 'aailaand' (eiland). Schiermonnikoog ligt boven Groningen en was in het verleden, naast Borkum, het enige waddeneiland dat frequent door Groningers werd bezocht, waardoor het de koosnaam 'os aailaand' (ons eiland) kreeg.
 *'''Vervougen''':
 
 ==Aaisk==
@@ -95,18 +95,28 @@
 *'''Aander meugelkheden''': aais
 *'''Ôfgelaaide woorden''': aaisken (eisen, werkwoord)
 *'''Nederlaands''': eis
-*'''Heerkomst''': van t Oldsaksische ''ēscian'', van t Proto-Germoanse ''ayǝs-''.
+*'''Heerkomst''': van t Oldsaksische 'ēscian', van t Proto-Germoanse 'ayǝs-'.
 *'''Vervougen''':
 
 ==Aal==
-*'''Oetsproak''': /ɔːl/
+===Betaikenis 1===
+*'''Oetsproak''': /ɒːl/
 *'''Meervold''': -
 *'''Aander meugelkheden''': 
 *'''Ôfgelaaide woorden''': 
 **aalmoal (allemaal)
 **aalweegs (steeds, tijdsuitdrukking, bv. ik leer aalweegs meer)
 *'''Nederlaands''': al, alle
-*'''Heerkomst''': van t Proto-Germoanse ''alnaz''.
+*'''Heerkomst''': van t Proto-Germoanse 'alnaz'.
+*'''Vervougen''':
+
+===Betaikenis 2===
+*'''Oetsproak''': /ɒːl/ of /aːl/
+*'''Meervold''': 
+*'''Aander meugelkheden''': aingoal
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': steeds, voortdurend
+*'''Heerkomst''': meugelk n ôfkörten van 'aingoal'
 *'''Vervougen''':
 
 ==Aalmoal==
@@ -115,7 +125,7 @@
 *'''Aander meugelkheden''': apmoal, aal
 *'''Ôfgelaaide woorden''': apmoal (allemaal)
 *'''Nederlaands''': allemaal
-*'''Heerkomst''': van ''aal'' en ''moal''
+*'''Heerkomst''': van 'aal' en 'moal'
 *'''Vervougen''':
 
 ==Aaltied==
@@ -124,7 +134,7 @@
 *'''Aander meugelkheden''': aaltieds, aaid, immer (as man over t verleden proat)
 *'''Ôfgelaaide woorden''': aaltieds, aaid (altijd)
 *'''Nederlaands''': altijd
-*'''Heerkomst''': Van ''aal'' en ''tied''
+*'''Heerkomst''': Van 'aal' en 'tied'
 *'''Vervougen''':
 
 ==Aanbetern==
@@ -133,7 +143,7 @@
 *'''Aander meugelkheden''': 
 *'''Ôfgelaaide woorden''': 
 *'''Nederlaands''': herstellen van ziekte
-*'''Heerkomst''': van ''aan'' en ''beter''
+*'''Heerkomst''': van 'aan' en 'beter'
 *'''Vervougen''':
 **Ik beter aan
 **Doe beterst aan
@@ -145,23 +155,24 @@
 ===Betaikenis 1===
 *'''Oetsproak''': /æːndər/
 *'''Meervold''': 
-*'''Aander meugelkheden''': 
+*'''Aander meugelkheden''': ander
 *'''Ôfgelaaide woorden''': 
 **aans (anders)
 **aanderzieds (aan de andere kant)
+**elkander, ainander (elkaar)
 *'''Nederlaands''': ander
-*'''Heerkomst''': van t Proto-Germoanse ''anþaraz''
+*'''Heerkomst''': van t Proto-Germoanse 'anþaraz'
 *'''Vervougen''':
 
 ==Betaikenis 2==
 *'''Oetsproak''': /æːndər/
 *'''Meervold''': 
-*'''Aander meugelkheden''': kommende
+*'''Aander meugelkheden''': kommende, ander
 *'''Ôfgelaaide woorden''': 
 **aanderdoags (genitief van "morgen", bv. aanderdoagsoavends (morgenavond))
 **aandermoal (de volgende keer)
 *'''Nederlaands''': volgende (bij tijd, bv. aander week (volgende week))
-*'''Heerkomst''': van t Proto-Germoanse ''anþaraz''
+*'''Heerkomst''': van t Proto-Germoanse 'anþaraz'
 *'''Vervougen''':
 
 ==Aandij==
@@ -170,7 +181,7 @@
 *'''Aander meugelkheden''': aangrui
 *'''Ôfgelaaide woorden''': 
 *'''Nederlaands''': groei, aangroeing (zelfstandig naamwoord)
-*'''Heerkomst''': van ''aan'' en ''dij'' (groei, vergelijk ''uitdijen'')
+*'''Heerkomst''': van 'aan' en 'dijen' (groeien, vergelijk ''uitdijen'')
 *'''Vervougen''':
 
 ==aanlangen==
@@ -195,7 +206,7 @@
 *'''Aander meugelkheden''': 
 *'''Ôfgelaaide woorden''': 
 *'''Nederlaands''': stimuleren, aanzetten tot
-*'''Heerkomst''': van ''aan'' en ''peerd'' (paard) - afkomstig van het slaan met een zweep om een paard aan te zetten tot werken.
+*'''Heerkomst''': van 'aan' en 'peerd' (paard) - afkomstig van het slaan met een zweep om een paard aan te zetten tot werken.
 *'''Vervougen''':
 **Ik peerdje aan
 **Doe peerdjest aan
@@ -218,7 +229,7 @@
 *'''Aander meugelkheden''': aask
 *'''Ôfgelaaide woorden''': aaskemmer (prullebak, lett. asemmer)
 *'''Nederlaands''': as (overblijfsel van vuur)
-*'''Heerkomst''': van t Proto-Germoanse ''askōn''
+*'''Heerkomst''': van t Proto-Germoanse 'askōn'
 *'''Vervougen''': 
 
 ==Acht==
@@ -228,7 +239,7 @@
 *'''Aander meugelkheden''': aacht(e)
 *'''Ôfgelaaide woorden''': 
 *'''Nederlaands''': acht (getal)
-*'''Heerkomst''': van t Proto-Germoanse ''ahtōu'', van t Proto-Indo-Uropese ''oḱtṓw''. 
+*'''Heerkomst''': van t Proto-Germoanse 'ahtōu', van t Proto-Indo-Uropese 'oḱtṓw'. 
 *'''Vervougen''':
 
 ===Betaikenis 2===
@@ -239,7 +250,7 @@
 **achtenis ([[WEV]])
 *'''Ôfgelaaide woorden''': 
 *'''Nederlaands''': aandacht (die je moet/zou moeten geven; vergelijk ''Geef acht!'')
-*'''Heerkomst''': van t Oldsaksische ''āhta''
+*'''Heerkomst''': van t Oldsaksische 'āhta'
 *'''Vervougen''':
 
 ==Admis==
@@ -273,6 +284,242 @@
 *'''Ôfgelaaide woorden''': Adrillenkaarms (allerheiligenkermis in Winschoten)
 *'''Nederlaands''': allerheiligen (christelijke feestdag)
 *'''Heerkomst''': Meugelk van '''a'''l'''d'''e'''r'''h'''ill'''eg'''en'''.
+*'''Vervougen''':
+
+==Affeer==
+*'''Oetsproak''': /əfɪːər/ of /afɪːər/
+*'''Meervold''': affeers of afferes
+*'''Aander meugelkheden''': 
+**affere
+**waark
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': beroep, (professionele) betrekking
+*'''Heerkomst''': van t Franse 'affaire', van t Latainse 'ad facere' (doun)
+*'''Vervougen''':
+
+==Aibels==
+*'''Oetsproak''': /aɪbols/
+*'''Meervold''': 
+*'''Aander meugelkheden''': 
+**hail 
+**slim
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': erg, zeer (zoals in "zeer bekwaam")
+*'''Heerkomst''': 
+*'''Vervougen''':
+
+==Aigen==
+*'''Oetsproak''': 
+*'''Meervold''': 
+*'''Aander meugelkheden''': 
+*'''Ôfgelaaide woorden''': 
+**aigense (eigen, zelfstandig naamswoord)
+**aigender (eigenaar)
+*'''Nederlaands''': eigen
+*'''Heerkomst''': van t Proto-Germoanse 'aiganaz'
+*'''Vervougen''':
+
+==Aigenste==
+*'''Oetsproak''': 
+*'''Meervold''': 
+*'''Aander meugelkheden''': (de)zulfde
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': (de)zelfde
+*'''Heerkomst''': van 'aigen'
+*'''Vervougen''':
+
+==Ain==
+===Betaikenis 1===
+*'''Oetsproak''': /aɪn/ of /ɒɪn/
+*'''Meervold''': ainen
+*'''Aander meugelkheden''': 
+**een ([[WEK]])
+**eein ([[NVL]]
+**ein ([[WEV]], [[HGL]] deur de rieke boeren)
+**aine ([[VEK]] as telwoord, bv. ik heb ain appel en doe hest ook ~) 
+*'''Ôfgelaaide woorden''': 
+**aineg (enig)
+**allain (alleen)
+**aine (iemand)
+**ains (eens)
+*'''Nederlaands''': één (getal)
+*'''Heerkomst''': van t Oldgrönnegse 'ien', van t Oldfraise 'ān', van t Proto-Germoanse 'ainaz', van t Proto-Indo-Uropese 'ānóynos' 
+*'''Vervougen''':
+
+===Betaikenis 2===
+*'''Oetsproak''': /aɪn/ of /ɒɪn/
+*'''Meervold''': 
+*'''Aander meugelkheden''': n (ôförting ien t aaldoagse sproakbroeken)
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': een (lidwoord)
+*'''Heerkomst''':  van t Oldgrönnegse 'ien', van t Oldfraise 'ān', van t Proto-Germoanse 'ainaz', van t Proto-Indo-Uropese 'ānóynos' 
+*'''Vervougen''':
+
+==Aine==
+*'''Oetsproak''': /aɪn/ of /ɒɪn/
+*'''Meervold''': gounend, welken
+*'''Aander meugelkheden''': 
+**ene ([[WEK]])
+**eeine ([[NVL]]
+**eine ([[WEV]], [[HGL]] deur de rieke boeren)
+*'''Ôfgeleide woorden''':
+*'''Nederlaands''': iemand
+*'''Heerkomst''': van 'ain' 
+*'''Vervougen''':
+
+==Ains==
+*'''Oetsproak''': /aɪns/ of /ɒɪns/
+*'''Meervold''': ainen
+*'''Aander meugelkheden''':
+**ais
+**es 
+**eens ([[WEK]])
+**eeins ([[NVL]]
+**eins ([[WEV]], [[HGL]] deur de rieke boeren)
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': eens
+*'''Heerkomst''': van 'ain'
+*'''Vervougen''':
+
+==Aingoal==
+*'''Oetsproak''': 
+*'''Meervold''': 
+*'''Aander meugelkheden''': aal
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': steeds, voortdurend
+*'''Heerkomst''': meugelk van t Franse 'égal'
+*'''Vervougen''':
+
+==Aiw==
+*'''Oetsproak''': /ɒju/
+*'''Meervold''': aiwen, aiven (mv. van 'aive', moar ook broekt as mv. van 'aiw')
+*'''Aander meugelkheden''': 
+**aive
+**eiw ([[WEV]]) 
+**eeuw ([[VEK]])
+**ieuw ([[WEK]])
+*'''Ôfgelaaide woorden''': 
+**aiweg, aiveg, eeuweg (eeuwig)
+*'''Nederlaands''': eeuw 
+*'''Heerkomst''': van t Latainse 'aevum' (tiedpaark) 
+*'''Vervougen''':
+
+==Alleer==
+*'''Oetsproak''': /aLɪːər/
+*'''Meervold''': 
+*'''Aander meugelkheden''': 
+**vrouger, vrogger
+**dou ien/in dij tied
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': vroeger 
+*'''Heerkomst''': meugelk van 'al' (reeds) en 'heer' (geleden)
+*'''Vervougen''':
+
+==Allendeg==
+*'''Oetsproak''': /aleənəχ/ 
+*'''Meervold''': 
+*'''Aander meugelkheden''': 
+**allend, allìnd
+**allain
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': alleen
+*'''Heerkomst''': van 'al' en 'ain'
+*'''Vervougen''': 
+
+==Allozie==
+*'''Oetsproak''': /aloʊzi/
+*'''Meervold''': 
+*'''Aander meugelkheden''': haandklok(ke) 
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': horloge
+*'''Heerkomst''': van t Franse horlòge, van t Oldgraikse 'ώρολόγιον' (hōrologion)
+*'''Vervougen''':
+
+==Angel==
+*'''Oetsproak''': /æŋoL/
+*'''Meervold''': angels
+*'''Aander meugelkheden''': 
+*'''Ôfgelaaide woorden''': 
+**angeln (vissen met een hengel, werkwoord)
+**angelgaar (hengelstok)
+*'''Nederlaands''': hengel (het hele ding)
+*'''Heerkomst''': 
+*'''Vervougen''':
+
+==Antam==
+*'''Oetsproak''': /æntæɜm/
+*'''Meervold''': antams
+*'''Aander meugelkheden''': 
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': probleemkind 
+*'''Heerkomst''': 
+*'''Vervougen''':
+
+==Appel==
+*'''Oetsproak''': /æpoL/
+*'''Meervold''': appels
+*'''Aander meugelkheden''': abbel (mv. abbeln)
+*'''Ôfgelaaide woorden''': 
+**appelhof (appelboomgaard)
+**appelkeern (klokhuis)
+**appelmots (appelmoes)
+**appelzaikte (afkeer tegen het eten van fruit)
+**poepappel (gemenerik)
+**eerdappel (aardappel)
+**appelgernoat (granaatappel)
+**appelsien (sinaasappel)
+*'''Nederlaands''': probleemkind 
+*'''Heerkomst''': van t Proto-Germoanse 'apulaz', van t Proto-Indo-Uropese 'hₐebōl'
+*'''Vervougen''':
+
+==Appelgernoat==
+*'''Oetsproak''': /æpoLχənɔːɜt/
+*'''Meervold''': appelgernoaten
+*'''Aander meugelkheden''': 
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': granaatappel
+*'''Heerkomst''': van 'appel' en 'gernoat'
+*'''Vervougen''':
+
+==Appelmots==
+*'''Oetsproak''': /æpoLmɔts/
+*'''Meervold''':
+*'''Aander meugelkheden''': 
+**abbelmots
+**appelbrij, abbelbrij
+**smots
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': granaatappel
+*'''Heerkomst''': van 'appel' en 'gernoat'
+*'''Vervougen''':
+
+==Appelsien==
+*'''Oetsproak''': /æpoLsiɜn/
+*'''Meervold''': appelsienen
+*'''Aander meugelkheden''': 
+**sienesappel (verhollaandst)
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': sinaasappel
+*'''Heerkomst''': van 'appel' en 'Sina' (China, land)
+*'''Vervougen''':
+
+==As==
+*'''Oetsproak''': /æɜs/
+*'''Meervold''': als
+*'''Aander meugelkheden''': 
+**wen
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': als
+*'''Heerkomst''': van t Oldfraise 'alsa' 
+*'''Vervougen''':
+
+==Avvekoat==
+*'''Oetsproak''': /ævəkɔːɜt/
+*'''Meervold''': als
+*'''Aander meugelkheden''': 
+*'''Ôfgelaaide woorden''': 
+*'''Nederlaands''': advocaat
+*'''Heerkomst''': van t Latainse 'ad vocare' (roupen)
 *'''Vervougen''':
 
 {{Grunnegs woordenbouk}}
