*Empty MediaWiki Message*

--- a/Grunnegs_A.mw
+++ b/Grunnegs_A.mw
@@ -49,7 +49,7 @@
 
 == Aaid ==
 ===Betaikenis 1===
-*'''Oetsproak''': /aːɪt/ of /ɒːɪt/
+*'''Oetsproak''': /aːɪt/ of /ɑːɪt/
 *'''Meervold''': -
 *'''Aander meugelkheden''': aaltied, aaltieds, immer (as man over t verleden proat)
 *'''Ôfgelaaide woorden''': aaids (altijd maar weer)
@@ -58,7 +58,7 @@
 *'''Vervougen''':
 
 ===Betaikenis 2===
-*'''Oetsproak''': /aːɪt/ of /ɒːɪt/
+*'''Oetsproak''': /aːɪt/ of /ɑːɪt/
 *'''Meervold''': 
 **aaider (oldmoods)
 **aaiden (nijmoods)
@@ -100,7 +100,7 @@
 
 ==Aal==
 ===Betaikenis 1===
-*'''Oetsproak''': /ɒːl/
+*'''Oetsproak''': /ɑːl/
 *'''Meervold''': -
 *'''Aander meugelkheden''': 
 *'''Ôfgelaaide woorden''': 
@@ -111,7 +111,7 @@
 *'''Vervougen''':
 
 ===Betaikenis 2===
-*'''Oetsproak''': /ɒːl/ of /aːl/
+*'''Oetsproak''': /ɑːl/ of /aːl/
 *'''Meervold''': 
 *'''Aander meugelkheden''': aingoal
 *'''Ôfgelaaide woorden''': 
@@ -120,7 +120,7 @@
 *'''Vervougen''':
 
 ==Aalmoal==
-*'''Oetsproak''': 
+*'''Oetsproak''': /ɑlmɔːl/
 *'''Meervold''': 
 *'''Aander meugelkheden''': apmoal, aal
 *'''Ôfgelaaide woorden''': apmoal (allemaal)
@@ -129,7 +129,7 @@
 *'''Vervougen''':
 
 ==Aaltied==
-*'''Oetsproak''': 
+*'''Oetsproak''': /ɑːltit/
 *'''Meervold''': -
 *'''Aander meugelkheden''': aaltieds, aaid, immer (as man over t verleden proat)
 *'''Ôfgelaaide woorden''': aaltieds, aaid (altijd)
@@ -201,7 +201,7 @@
 **Ik heb aanlangd
 
 ==aanpeerdjen==
-*'''Oetsproak''': /æːmpɪtjən/ of /æːmpɪːtjən/
+*'''Oetsproak''': /æːmpɪtjən/ of /æːmpɪːətjən/
 *'''Meervold''': 
 *'''Aander meugelkheden''': 
 *'''Ôfgelaaide woorden''': 
@@ -215,7 +215,7 @@
 **Ik heb aanpeerdjed
 
 ==Aargens==
-*'''Oetsproak''': 
+*'''Oetsproak''': /æːgŋs/
 *'''Meervold''': 
 *'''Aander meugelkheden''': aargenswoar, aargendwoar
 *'''Ôfgelaaide woorden''': aargenswoar, aargendwoar (ergens)
@@ -298,7 +298,7 @@
 *'''Vervougen''':
 
 ==Aibels==
-*'''Oetsproak''': /aɪbols/
+*'''Oetsproak''': /ɑɪbols/
 *'''Meervold''': 
 *'''Aander meugelkheden''': 
 **hail 
@@ -330,7 +330,7 @@
 
 ==Ain==
 ===Betaikenis 1===
-*'''Oetsproak''': /aɪn/ of /ɒɪn/
+*'''Oetsproak''': /ɑɪn/ of /ɒɪn/
 *'''Meervold''': ainen
 *'''Aander meugelkheden''': 
 **een ([[WEK]])
@@ -347,7 +347,7 @@
 *'''Vervougen''':
 
 ===Betaikenis 2===
-*'''Oetsproak''': /aɪn/ of /ɒɪn/
+*'''Oetsproak''': /ɑɪn/ of /ɒɪn/
 *'''Meervold''': 
 *'''Aander meugelkheden''': n (ôförting ien t aaldoagse sproakbroeken)
 *'''Ôfgelaaide woorden''': 
@@ -356,7 +356,7 @@
 *'''Vervougen''':
 
 ==Aine==
-*'''Oetsproak''': /aɪn/ of /ɒɪn/
+*'''Oetsproak''': /ɑɪn/ of /ɒɪn/
 *'''Meervold''': gounend, welken
 *'''Aander meugelkheden''': 
 **ene ([[WEK]])
@@ -368,7 +368,7 @@
 *'''Vervougen''':
 
 ==Ains==
-*'''Oetsproak''': /aɪns/ of /ɒɪns/
+*'''Oetsproak''': /ɑɪns/ of /ɒɪns/
 *'''Meervold''': ainen
 *'''Aander meugelkheden''':
 **ais
@@ -382,7 +382,7 @@
 *'''Vervougen''':
 
 ==Aingoal==
-*'''Oetsproak''': 
+*'''Oetsproak''': /ɑɪnχɔːL/
 *'''Meervold''': 
 *'''Aander meugelkheden''': aal
 *'''Ôfgelaaide woorden''': 
@@ -391,7 +391,7 @@
 *'''Vervougen''':
 
 ==Aiw==
-*'''Oetsproak''': /ɒju/
+*'''Oetsproak''': /ɑju/
 *'''Meervold''': aiwen, aiven (mv. van 'aive', moar ook broekt as mv. van 'aiw')
 *'''Aander meugelkheden''': 
 **aive
@@ -505,7 +505,7 @@
 
 ==As==
 *'''Oetsproak''': /æɜs/
-*'''Meervold''': als
+*'''Meervold''': 
 *'''Aander meugelkheden''': 
 **wen
 *'''Ôfgelaaide woorden''': 
@@ -515,7 +515,7 @@
 
 ==Avvekoat==
 *'''Oetsproak''': /ævəkɔːɜt/
-*'''Meervold''': als
+*'''Meervold''': 
 *'''Aander meugelkheden''': 
 *'''Ôfgelaaide woorden''': 
 *'''Nederlaands''': advocaat
