--- a/Grunnegs_A.mw
+++ b/Grunnegs_A.mw
@@ -9,7 +9,7 @@
 **Tuudaai (kippenei)
 **Aaidoor (eierdooier)
 **Aaierjong (jongste knecht)
-**Aaierproem (dikke pruim)'
+**Aaierproem (dikke pruim)
 **Aailoof (klimop, lett. eierblad)
 *'''Nederlaands''': ei
 *'''Heerkomst''': van t Proto-Germoanse 'ajjam', meugelk van t Proto-Indo-Uropese 'ōwyóm'.
