--- a/Grunnegs_A.mw
+++ b/Grunnegs_A.mw
@@ -70,7 +70,7 @@
 
 ==Aailaand==
 ===Betaikenis 1===
-*'''Oetsproak''': 
+*'''Oetsproak''': /ɑːɪsk/
 *'''Meervold''': aailanden
 *'''Aander meugelkheden''': 
 *'''Ôfgelaaide woorden''': 
