*Empty MediaWiki Message*

--- a/Grunnegs_A.mw
+++ b/Grunnegs_A.mw
@@ -2,7 +2,7 @@
 
 ==Aai==
 ===Betaikenis 1===
-*'''Oetsproak''': /aɪ/
+*'''Oetsproak''': /aːɪ/
 *'''Meervold''': Aaier
 *'''Aander meugelkheden''': 
 *'''Ôfgelaaide woorden''': 
@@ -16,7 +16,7 @@
 *'''Vervougen''':
 
 ===Betaikenis 2===
-*'''Oetsproak''': /aɪ/
+*'''Oetsproak''': /aːɪ/
 *'''Meervold''': aaier
 *'''Aander meugelkheden''': 
 *'''Ôfgelaaide woorden''': 
@@ -25,7 +25,7 @@
 *'''Vervougen''':
 
 ===Betaikenis 3===
-*'''Oetsproak''': /aɪ/
+*'''Oetsproak''': /aːɪ/
 *'''Meervold''': aaier
 *'''Aander meugelkheden''': oog
 *'''Ôfgelaaide woorden''': 
@@ -36,7 +36,7 @@
 *'''Vervougen''':
 
 ==Aaiber==
-*'''Oetsproak''': /aɪbər/
+*'''Oetsproak''': /aːɪbər/
 *'''Meervold''': aaibers
 *'''Aander meugelkheden''': aaibert, eiber ([[NVL]], [[WEK]]), störk ([[WEV]])
 *'''Ôfgelaaide woorden''': 
