--- a/Achter-Zuwwent.mw
+++ b/Achter-Zuwwent.mw
@@ -1,4 +1,4 @@
-'''Mariënvelde''' is een buurtschap in de gemeente [[Oost Gelre]] in de [[Nederland]]se previnsie [[Gelderland]]. T'dorp hef een bak vol cafe's en der wonen ok nog wat volk van hulshof, de'j wilt alleen moar zoep'n.
+'''Mariënvelde''' is een buurtschap in de gemeente [[Oost Gelre]] in de [[Nederland]]se previnsie [[Gelderland]]. T'dorp hef een bak vol cafe's en der wonen ok nog wat volk van hulshof, de'j wilt alleen moar zoep'n. Niek is dom
 
 {{Begin|act}}
 {{Oost Gelre}}
