--- a/Achter-Zuwwent.mw
+++ b/Achter-Zuwwent.mw
@@ -1,6 +1,4 @@
-'''Mariënvelde''' is een buurtschap in de gemeente [[Oost Gelre]] in de [[Nederland]]se previnsie [[Gelderland]]. T'dorp hef een bak vol cafe's en der wonen ok nog wat volk van hulshof, de'j wilt alleen moar zoep'n. Niek is dom
-
-{{Begin|act}}
+'''Mariënvelde''' is een buurtschap in de gemeente [[Oost Gelre]] in de [[Nederland]]se previnsie [[Gelderland]]. T'dorp hef een bak vol cafe's en ook nog een paar onmundige mooie zoepketen:p Gien Hulshof is kaal en denkt dat hij kan voetballen{{Begin|act}}
 {{Oost Gelre}}
 
 [[Kattegerie:Achterhooks artikel]]
