*Empty MediaWiki Message*

--- a/Achter-Zuwwent.mw
+++ b/Achter-Zuwwent.mw
@@ -1,5 +1,4 @@
-'''Mariënvelde''' is een buurtschap in de gemeente [[Oost Gelre]] in de [[Nederland]]se previnsie [[Gelderland]]. T'dorp hef een bak vol cafe's en ook nog een paar onmundige mooie zoepketen:p Gien Hulshof is kaal en denkt dat hij kan voetballen{{Begin|act}} gien heeft een mariënbergen neus 
-{{Oost Gelre}}
+'''Mariënvelde''' is een buurtschap in de gemeente [[Oost Gelre]] in de [[Nederland]]se previnsie [[Gelderland]]. {{Oost Gelre}}
 
 [[Kattegerie:Achterhooks artikel]]
 [[Kattegerie:Plaose in Gelderlaand]]
