--- a/Vootbal.mw
+++ b/Vootbal.mw
@@ -7,7 +7,7 @@ n Wedstried wörd in gooe baann eleaidt duur nen scheidsrechter en zinne greansr
 
 De partieje met de meeste peuntn an t eande van de wedstried hef t spel ewunn. Bie n geliek antal peuntn vuur beaide partiejn wörd esprökn van ''geliekspel''. As dit vuurkeump kan dr ekeuzn wördn vuur meer spölminuutn, of ne strafskupperiege.
 
-Voetbal is unne heule lüke sport. Als du voetbalt bent du hiel erch cool. ik kunne unne goede jonguh genamd robin maar hie is er lelik, echt unne griezel
+Voetbal is unne heule lüke sport. Als du voetbalt bent du hiel erch cool. ik kunne unne goede jonguh genamd robin maar hie is er lelik, echt unne griezel. Bedanke Martijn, ge bent hele erdige jungen, mar wohl huuul lelik. Nog gruzeliger dan robin.
 
 == Doel van t spel ==
 t Doel van t spel is um n bal in t doel van de teegnspöllers te kriegn. Hierbie magnt de spöllers gebroek maakn van t hele lichaam, behalve de haande. Nen oetzeundering hierop is n doelman, den ook met de haande mag woarkn.
