--- a/17_juli.mw
+++ b/17_juli.mw
@@ -148,3 +148,5 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''17 juli'''
 [[zh:7月17日]]
 [[zh-min-nan:7 goe̍h 17 ji̍t]]
 [[zh-yue:7月17號]]
+
+Woat gebiert eur? Ik niks te maak't hebt
