*Empty MediaWiki Message*

--- a/Liest_van_Engelse_woorden_mit_n_kontinentoale_verbondschop_mor_n_aandere_betaikenis.mw
+++ b/Liest_van_Engelse_woorden_mit_n_kontinentoale_verbondschop_mor_n_aandere_betaikenis.mw
@@ -177,6 +177,11 @@ Dit is n '''liest mit [[Engels]]e woorden mit n kontinentoale verbondschop, môr
 |veurste, vuurste, voorst
 |the one in front
 |-
+|flask
+|kolf (schaikundeg glas)
+|fles, flask, vlès
+|bottle
+|-
 |fowl
 |gevogelte
 |vogel, Vagel, voegel
