--- a/Ieme.mw
+++ b/Ieme.mw
@@ -36,51 +36,26 @@ Töt de superfamilie van iemn beheurt de voalgnde families:
 [[Kattegerie:Tweants artikel]]
 [[Kattegerie:Insekt]]
 
-[[nds:Honnigimmen]]
-[[ang:Hunigbēo]]
-[[ar:نحلة العسل]]
-[[br:Gwenan]]
-[[ca:Apis (gènere)]]
-[[co:Apa]]
-[[cr:ᐋᒨ]]
-[[cs:Včela]]
-[[cy:Gwenynen Fêl]]
-[[de:Honigbienen]]
-[[en:Honey bee]]
-[[eo:Mielabelo]]
-[[es:Apis (género)]]
-[[et:Mesilane]]
-[[fa:زنبور عسل]]
-[[fr:Apis (genre)]]
-[[hi:मधुमक्खी]]
-[[hr:Medonosna pčela]]
-[[id:Lebah madu]]
-[[it:Apis]]
-[[ja:ミツバチ]]
-[[ko:꿀벌]]
-[[la:Apis (genus)]]
-[[ln:Nzói]]
-[[ml:തേനീച്ച]]
-[[ne:मौरी]]
-[[nl:Honingbijen]]
-[[nn:Honningbier]]
-[[no:Honningbier]]
-[[nrm:Moûque à myi]]
-[[pa:ਮਧੂ ਮੱਖੀ]]
-[[pl:Pszczoła]]
-[[pnb:شہد دی مکھی]]
-[[pt:Apis]]
-[[qu:Lachiwa]]
-[[ru:Apis]]
-[[scn:Lapa (nzettu)]]
-[[sco:Skep-bee]]
-[[sk:Včela (rod)]]
-[[sv:Honungsbin]]
-[[ta:தேனீ]]
-[[te:తేనెటీగ]]
-[[tl:Pukyutan]]
-[[ur:شہد مکھی]]
-[[vec:Ava]]
-[[yi:בין]]
-[[zh:蜜蜂]]
-[[zh-min-nan:Phang]]
+[[ca:Apoïdeu]]
+[[cy:Gwenynen]]
+[[en:Apoidea]]
+[[es:Apoidea]]
+[[fr:Apoidea]]
+[[he:דבורים]]
+[[hr:Cvjetari]]
+[[hu:Méhek]]
+[[it:Apoidea]]
+[[ko:꿀벌상과]]
+[[kv:Мазі]]
+[[mhr:Мӱкш]]
+[[nl:Apoidea]]
+[[no:Apoidea]]
+[[oc:Apoidea]]
+[[pl:Pszczoły]]
+[[pt:Abelha]]
+[[ro:Apoidea]]
+[[ru:Пчёлы]]
+[[sl:Čebeljeliki kožokrilci]]
+[[sv:Bin]]
+[[uk:Бджоли]]
+[[zh:蜂]]
