--- a/Thaisen.mw
+++ b/Thaisen.mw
@@ -1,4 +1,4 @@
 {{vort}}
 
-Thaizen is een dorpke ien de prevencie groningen
+'''Thaizen''' of ''' Thaisen''' is n dorpke ien de [[Grunnen (provìnzie)|prevencie Groningen]].
 Der woonen moar weing thaizingers ien Thaizen, sikkom 800 ienwoners telt het.
