Woar ligt t dorpke?

--- a/Thaisen.mw
+++ b/Thaisen.mw
@@ -2,3 +2,5 @@
 
 '''Thaizen''' of ''' Thaisen''' is n dorpke ien de [[Grunnen (provìnzie)|prevencie Groningen]].
 Der woonen moar weing thaizingers ien Thaizen, sikkom 800 ienwoners telt het.
+
+{{coordinate|region=NL-GR|type=city}}
