--- a/Eanter.mw
+++ b/Eanter.mw
@@ -25,7 +25,7 @@ Dr is in Eanter ne stoarke skeaid tusken Katteliek en Protestaants. Dr zeent nog
 
 Eantersen köant onmeundig hard woarkn. Ook de beleawing van Eanter as t Kloompndoarp van de Wearld is nog aait stoark. Op verskeaidene "offisjele" gebuurtenisse komt de kearls nog strak in pak, mear wal op de kloompe. Bie de [[karnaval]]sverenige ''De Boorköttels'' is dit zelfs verplicht.
 
-Eantersen kuiert [[Eanters]]. t Stekt zó of de'j det nit aans köant zegn. Van alle Tweantse variaantn lik t nog t meest op t [[Riesns]], mear n heel stuk skoarper. Eantersen meant det t Eanters de beste sproake is, en det zal iederene heurn. Leu dee at ofwieknd köjert, kriegnt meesttieds direkt te heurn wo at ze t op zien Eanters oet mutn sprekn. Vuural Riesnders mutn t vake liedn wat sproake en gebroekn angeet, mear det is ook Eanterse humor. Eantersen doot gearne stokkern, töt t akelige too. Vuur ene den at det nit weet, of doar nit teegn kan, kan n bezeuk an Eanter zoer ofloopn. Leu dee at vakerder in Eanter komt keant dit wal, en lachet liek zo hard met. 
+Eantersen köjert [[Eanters]]. t Stekt zó of de'j det nit aans köant zegn. Van alle Tweantse variaantn lik t nog t meest op t [[Riesns]], mear n heel stuk skoarper. Eantersen meant det t Eanters de beste sproake is, en det zal iederene heurn. Leu dee at ofwieknd köjert, kriegnt meesttieds direkt te heurn wo at ze t op zien Eanters oet mutn sprekn. Vuural Riesnders mutn t vake liedn wat sproake en gebroekn angeet, mear det is ook Eanterse humor. Eantersen doot gearne stokkern, töt t akelige too. Vuur ene den at det nit weet, of doar nit teegn kan, kan n bezeuk an Eanter zoer ofloopn. Leu dee at vakerder in Eanter komt keant dit wal, en lachet liek zo hard met. 
 
 n Duudelik verskil met Riesns is bievuurbeeld t woord ''woark''. Eantersen maakt doar n laank ''waark'' van. Wöarde met lange kleenkers wordt met völle oethaaln oet esprökn.<br />
 In Riesn is nen Eantersen "verdreeid" en in Eanter is nen Eantersen "verdreaid". 
