/* Appelmots */ Appelmots, neet Appelgernoat (moar zeg-ie "mots" as-t allineg stiet?)

--- a/Grunnegs_A.mw
+++ b/Grunnegs_A.mw
@@ -489,8 +489,8 @@
 **appelbrij, abbelbrij
 **smots
 *'''Ôfgelaaide woorden''': 
-*'''Nederlaands''': granaatappel
-*'''Heerkomst''': van 'appel' en 'gernoat'
+*'''Nederlaands''': appelmoes
+*'''Heerkomst''': van 'appel' en 'mots'
 *'''Vervougen''':
 
 ==Appelsien==
