--- a/Thaisen.mw
+++ b/Thaisen.mw
@@ -1,6 +1,1 @@
-{{vort}}
-
-'''Thaizen''' of ''' Thaisen''' is n dorpke ien de [[Grunnen (provìnzie)|prevencie Groningen]].
-Der woonen moar weing thaizingers ien Thaizen, sikkom 800 ienwoners telt het.
-
-{{coordinate|region=NL-GR|type=city}}
+#DEURVERWIEZING[[Taisen]]
