--- a/Taisen.mw
+++ b/Taisen.mw
@@ -1,7 +1,6 @@
-{{coordinate|NS=53/16/6/N |EW=6/39/1/E |region=NL-GR |type=city |pop=800 |article=/ |map=right |maplevel=adm2nd }}
-[[Ofbeelding:Zicht op Thesinge.jpg|right|thumb|Dörpsaanzicht]]
+[[Ofbeelding:Zicht op Thesinge.jpg|right|250px|thumb|Dörpsaanzicht]]
 
-'''Taisen''', '''Thaisen''' of '''Thaizen''' is n dorpke ien de gemainte [[Ten Boer]] ien de [[Grunnen (provìnzie)|pervìnzie Grönnen]]. Der wonen sikkom 800 luu, dij ''Taisenders'' nuimd worden. 
+'''Taisen''' is n dorpke ien de gemainte [[Ten Boer]] ien de [[Grunnen (provìnzie)|pervìnzie Grönnen]]. Der wonen sikkom 800 luu, dij ''Taisenders'' nuimd worden. 
 
 t Dörp ontstond om en bie de 12. aiw bie n [[benediktijnen]]klooster mit de noam ''Germania'', woarvan de noudoagse kìrk n overbliefsel van is.  
 
@@ -9,8 +8,3 @@ De korenmeulen ''Germania'' is vernuimd noar t olle klooster, dij noa de reformo
 
 [[Kattegerie:Grunnegs artikel]]
 [[Kattegerie:Ploats in Grunnen]]
-
-{{commonscat|Thesinge}}
-
-[[fr:Thesinge]]
-[[nl:Thesinge]]
