--- a/Ooststellingwarf.mw
+++ b/Ooststellingwarf.mw
@@ -97,7 +97,7 @@ Naost disse officiële plakken bin d'r in de gemiente de volgende [[buurtschop]]
 * [[Ni'je Vaort]]
 | valign="top" |
 * [[Oolde Willem]]
-* [[Petersburg]]
+* [[Petersburg (Ooststellingwarf)|Petersburg]]
 * [[Prandinge]]
 * [[De Riete]]
 * [[Rolpaol (Ooststellingwarf)|Rolpaol]]
