[[Petersburg]] → [[Petersburg (Ooststellingwarf)]]

--- a/Moskou_(Ooststellingwarf).mw
+++ b/Moskou_(Ooststellingwarf).mw
@@ -1,4 +1,4 @@
-'''Moskou''' is de naeme van een buurtschop vlakbi'j [[Donkerbroek]] in de [[Frieslaand|Friese]] gemiente [[Ooststellingwarf]]. Et het omdebi'j 285 inwoners. Vlakbi'j disse buurtschop leit [[Petersburg]], ok een buurtschop nuumd naor een stad in [[Ruslaand]].
+'''Moskou''' is de naeme van een buurtschop vlakbi'j [[Donkerbroek]] in de [[Frieslaand|Friese]] gemiente [[Ooststellingwarf]]. Et het omdebi'j 285 inwoners. Vlakbi'j disse buurtschop leit [[Petersburg (Ooststellingwarf)|Petersburg]], ok een buurtschop nuumd naor een stad in [[Ruslaand]].
 
 {{Ooststellingwarf}}
 
