[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Pompsters.mw
+++ b/Pompsters.mw
@@ -49,7 +49,7 @@
 |}
 t '''Pompsters''' is n Nedersaksisch dialekt dat proat wordt ien t loug [[De Pomp]] (Kölmerpomp), ien t midden van t [[Frieslaand|Friese]] gemeente [[Kölmerlaand|Kölmerlann]]. Der wordt vanuut goan dat t aantal dij dit dialekt nog proat om en bie de 200 minsken komt, dij t meest tot de ollern heuren. t Sprekerstal nemt dan ook of.
 
-t Pompsters is n overgangsvörm tuzzen t [[Woldfries]], dat ien t westen van Kölmerlann proat wordt, en t [[Westerkertiers]], n Saksisch dialekt dat ien drij lougen ien oosteliek Kölmerlann en ien t aangrinzende part van Grunnen proat wordt. Zo het t Pompsters de Friese "g" ''<nowiki>[kh]</nowiki>'' beholden, in tieds dat man ien de naberske lougen [[Warfstermeul]], [[Muntjeziel]] en [[Boerum]] de "g" op zien Grunnegs uutsprekt. Doch het t Pompsters meer gemeen mit t [[Nedersaksisch]] as mit t [[Fries]] en wordt doarom tot de Nedersaksische dialekten (Grunnegs) rekend.
+t Pompsters is n overgangsvörm tuzzen t [[Woldfries]], dat ien t westen van Kölmerlann proat wordt, en t [[Westerkertiers]], n Saksisch dialekt dat ien drij lougen ien oosteliek Kölmerlann en ien t aangrinzende part van Grunnen proat wordt. Zo het t Pompsters de Friese "g" ''<nowiki>[kh]</nowiki>'' beholden, in tieds dat man ien de naberske lougen [[Warfstermeul]], [[Muntjeziel]] en [[Boerum]] de "g" op zien Grunnegs uutsprekt. Doch het t Pompsters meer gemeen mit t [[Nedersaksisch]] as mit t [[Westlaauwers Frais|Fries]] en wordt doarom tot de Nedersaksische dialekten (Grunnegs) rekend.
 
 Deurdat de overgong tuzzen t Westerkertiers en t Woldfries hiel stug velopt, wordt der vanuut goan dat t toalgebied van t Pompsters vrogger veul groter west was. t Is noameliek t enige overgongsdialekt tuzzen t Fries en t Grunnegs. 
 
