[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Stellingwarfs.mw
+++ b/Stellingwarfs.mw
@@ -61,7 +61,7 @@ Et Stellingwarfs het zien oorsprong in et [[Nedersaksisch]] en is daordeur verwa
 
 Ok in de vuuf oostelike dörpen van de [[Frieslaand|Friese]] gemiente [[Lemsterlaand]] ([[Delfstrehuzen]], [[Bantege]], [[Echtenerbrogge]], [[Echten]] en [[Oosterzee]]) wodt Stellingwarfs praot. Hier is et liekewel niet inheems, mar is et d'r hennebrocht deur luden uut [[Gieteren]], in Stienwiekerlaand, die d'r vanof de vrogge [[19e eeuw|negentiende ieuw]] et [[vene (grondsoorte)|leegvene]] ontginden. Krek zo wodde et Stellingwarfs vrogger ok praot in de dörpen in et zuden van de gemiente [[Et Vene (gemiente)|Et Vene]]: [[Hoornsterzwaog]], [[Jubbege]], [[Ooldehoorn]] en [[Ni'jehoorn]].
 
-De Stellingwarven beheuren tegere mit [[Et Bildt]] ([[Bildts]]), [[Liwwadden (stad)|Liwwadden]] ([[Stadsfries]]) en de [[Waddenailaand|Waddeneilanen]] [[Vlielaand (eilaand)|Vlielaand]] en [[Amelaand (eilaand)|Amelaand]] tot de gebieden in Frieslaand waor gien [[Fries]] praot wodt. Uutzunderings bin de Stellingwarver dörpen [[Waskemeer]] en [[Haulerwiek]].
+De Stellingwarven beheuren tegere mit [[Et Bildt]] ([[Bildts]]), [[Liwwadden (stad)|Liwwadden]] ([[Stadsfries]]) en de [[Waddenailaand|Waddeneilanen]] [[Vlielaand (eilaand)|Vlielaand]] en [[Amelaand (eilaand)|Amelaand]] tot de gebieden in Frieslaand waor gien [[Westlaauwers Frais|Fries]] praot wodt. Uutzunderings bin de Stellingwarver dörpen [[Waskemeer]] en [[Haulerwiek]].
 
 ==Kenmarken==
 Et Stellingwarfs is veur Nederlaanstaeligen over et algemien goed leesber. De Stellingwarfse [[literetuur]] is meerstal medern en kent een verfiend taelgebruuk. Pattie kenmarken gaon dudelik terogge op et Fries. Zo ontbrekt et wederkerend warkwoord ''zich'', waor ze ''him'' of ''hum'' veur bruken. Et Saksische ienhiedsmeervoold op ''-t'' is in de mieste Stellingwarfse dialekten vervangen deur ''-en'' (''zi'j maeken'', niet ''zi'j maakt''). Dit bin inkelde kenmarken die ok in et [[Veluws]] veurkommen. De ''-en''-vorm wodt zelfs bruukt veur de twiede persoon inkelvoold (''ie maeken'', niet ''ie maakt'').
