--- a/Ni'jberkoop.mw
+++ b/Ni'jberkoop.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Map NL Eaststellingwerf Nijeberkeap.png|thumb|300px|Liggen van Ni'jberkoop]]
-'''Ni'jberkoop''' ([[Nederlaands|Nederlaans]]: ''Nijeberkoop'', [[Fries]]: ''Nijeberkeap'') is een dörp in de [[Frieslaand|Friese]] gemiente [[Ooststellingwarf]]. Et kleinste dörp van de gemiente Ooststellingwarf. Omdebi'j 240 inwoners, een [[klokkestoel]], een schoele die niet meer bruukt wodt en een kefé-resteraant bin et meest opvalend.
+'''Ni'jberkoop''' ([[Nederlaands|Nederlaans]]: ''Nijeberkoop'', [[Westlaauwers Frais|Fries]]: ''Nijeberkeap'') is een dörp in de [[Frieslaand|Friese]] gemiente [[Ooststellingwarf]]. Et kleinste dörp van de gemiente Ooststellingwarf. Omdebi'j 240 inwoners, een [[klokkestoel]], een schoele die niet meer bruukt wodt en een kefé-resteraant bin et meest opvalend.
 
 Et dörp leit an de raand van et [[Nationaol Park Drents-Friese Woold]], een belangrieke toeristentrekker. Ni'jberkoop kreeg laandelike bekendhied deurdat de [[Stichting Pantera]] daor in 1993 heur poorten eupende as roofdierenopvangcentrum. Mit naeme et brullen van leeuwen het veul kemmosie veuroorzaekt in dit plattelaansdörp.
 
