[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Makkinge.mw
+++ b/Makkinge.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Eaststellingwerf Makkingea.png|thumb|300px|Ligging van Makkinge]]
-'''Makkinge''' ([[Nederlaands|Nederlaans]]: ''Makkinga'', [[Fries]]: ''Makkingea'') is een dörp in de [[Frieslaand|Friese]] gemiente [[Ooststellingwarf]] in [[Nederlaand]]. Et dörp het omdebi'j 1.039 inwoners (1 jannewaori 2006). 
+[[Ofbeelding:Map NL Eaststellingwerf Makkingea.png|thumb|Ligging van Makkinge]]
+'''Makkinge''' ([[Nederlaands|Nederlaans]]: ''Makkinga'', [[Westlaauwers Frais|Fries]]: ''Makkingea'') is een dörp in de [[Frieslaand|Friese]] gemiente [[Ooststellingwarf]] in [[Nederlaand]]. Et dörp het omdebi'j 1.039 inwoners (1 jannewaori 2006). 
 
 Makkinge was tot 1886 et heufddörp van de gemiente [[Ooststellingwarf]]. Hiernao is [[Oosterwoolde]] et heufddörp wodden. D'r is een [[museum]] veur oolde geriedschoppen genaemd ''Old Ark''. Elke laeste zaoterdag van meert tot oktober wodt een grote eupenlocht-rommelmark hullen.
 
