[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Donkerbroek.mw
+++ b/Donkerbroek.mw
@@ -6,7 +6,7 @@ Donkerbroek is ien van de ooldste [[nederzetting]]en in Zuudoost-Frieslaand. De 
 Langes Donkerbroek lopt de toeristische route ''De [[Friese Woolden]]''. Deur et dörp lopt een [[kenaol]] dat diel uutmaekt van de ''Turfroute''. Rondomtoe Donkerbroek bin uutstrekte [[bos]]sen en [[heed (vegetasie)|heidevelden]]. 
 Now is hiervan op loopofstaand van et dörp overbleven et laandgoed Ontwiek. Hier is op een beparkte oppervlakte een staolkaorte van et vroggere laandschop weeromme te vienen in de vorm van bos, lanen, heide en veenties. Ok bin d'r resten van een wielerbaene en een eupenlochttheater. In de bos leven een tiental reeën en vule soorten bosvoegels. De veenties harbargen brune en grune kikkers en [[glaozemakers|waeterjuffers]] as viervlekke, noordse witsnute en grote keizer.
 
-In Donkerbroek wodt van oorsprong [[Stellingwarfs]] praot. In de [[20e eeuw|20e ieuw]] ontston een starke [[Fries]]e invloed. Rond Donkerbroek bin een protte [[prehistorie|prehistorische]] [[archeologie|voonsten]] daon, mit naeme uut de [[bronstied]]. Op et [[begreefplak]] staot ok ien van de [[klokkestoelen in Frieslaand]].
+In Donkerbroek wodt van oorsprong [[Stellingwarfs]] praot. In de [[20e eeuw|20e ieuw]] ontston een starke [[Westlaauwers Frais|Fries]]e invloed. Rond Donkerbroek bin een protte [[prehistorie|prehistorische]] [[archeologie|voonsten]] daon, mit naeme uut de [[bronstied]]. Op et [[begreefplak]] staot ok ien van de [[klokkestoelen in Frieslaand]].
 
 ==Galleri'je==
 <gallery>
