--- a/Noordwoolde.mw
+++ b/Noordwoolde.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Weststellingwerf Noardwâlde.png|thumb|300px|Ligging Noordwoolde]]
-'''Noordwoolde''' ([[Nederlaands|Nederlaans]]: ''Noordwolde'', [[Fries]]: ''Noardwâlde'') is een dörp in de [[Frieslaand|Friese]] gemiente [[Weststellingwarf]] en het omdebi'j 3.500 inwoners.
+[[Ofbeelding:Map NL Weststellingwerf Noardwâlde.png|thumb|Ligging Noordwoolde]]
+'''Noordwoolde''' ([[Nederlaands|Nederlaans]]: ''Noordwolde'', [[Westlaauwers Frais|Fries]]: ''Noardwâlde'') is een dörp in de [[Frieslaand|Friese]] gemiente [[Weststellingwarf]] en het omdebi'j 3.500 inwoners.
 
 Noordwolde leit zo omdebi'j op et 'drieperveensiënpunt' van de perveensies Frieslaand, [[Drenthe]] en [[Oaveriessel|Overiessel]] in een aorig besleuten laandschop mit in et zuden  en oosten de bossen en heidevelden van Drenthe en in et westen de [[Lende]]vallei en et veerdere waeterrieke Frieslaand.
 
