--- a/Slekke.mw
+++ b/Slekke.mw
@@ -66,7 +66,10 @@ In [[Nederlaand|Nederland]] en [[België]] leven een paor hoenderd soorten slekk
 
 ==Nedersaksisch==
 *[[Drèents]]: ''slak{{small()|ke}}''
-*[[Grunnegs]]: ''snek{{small()|ke}}'', ''slak{{small()|ke}}''
+*[[Grunnegs]]: 
+**''snek{{small()|ke}}''
+**''slak{{small()|ke}}''
+**''snigge'' ([[WEV]])
 *[[Stellingwarfs]]: ''slakke''
 *[[Veluws]]: ''slek{{small()|ke}}''
 
