Nieuwe interwiki-link naar de Duitse versie.

--- a/Opper-Gelre.mw
+++ b/Opper-Gelre.mw
@@ -38,5 +38,6 @@ Opper-Gelre heurden helemaol tot et taalgebeed van et Nederlaands, al waren der 
 [[Kattegerie:Limburg (Nederlaand)]]
 [[Kattegerie:Plaose in Gelderlaand]]
 
+[[de:Obergeldern]]
 [[nl:Opper-Gelre]]
 [[ro:Geldern Spaniol]]
