bot aanders: [[hi:८ नवम्बर]]

--- a/8_november.mw
+++ b/8_november.mw
@@ -14,6 +14,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''8 november'''
 {{DEFAULTSORT:#:8 November}}
 [[Kattegerie:November]]
 
+[[nds:8. November]]
 [[af:8 November]]
 [[an:8 de noviembre]]
 [[ar:ملحق:8 نوفمبر]]
@@ -60,7 +61,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''8 november'''
 [[gu:નવેમ્બર ૮]]
 [[gv:8 Mee Houney]]
 [[he:8 בנובמבר]]
-[[hi:८ नवंबर]]
+[[hi:८ नवम्बर]]
 [[hif:8 November]]
 [[hr:8. studenog]]
 [[ht:8 novanm]]
@@ -95,7 +96,6 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''8 november'''
 [[myv:Сундерьковонь 8 чи]]
 [[nah:Tlamahtlāccēti 8]]
 [[nap:8 'e nuvembre]]
-[[nds:8. November]]
 [[nl:8 november]]
 [[nn:8. november]]
 [[no:8. november]]
