--- a/9_november.mw
+++ b/9_november.mw
@@ -13,6 +13,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''9 november'''
 {{DEFAULTSORT:#:9 November}}
 [[Kattegerie:November]]
 
+[[nds:9. November]]
 [[af:9 November]]
 [[an:9 de noviembre]]
 [[ar:ملحق:9 نوفمبر]]
@@ -59,7 +60,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''9 november'''
 [[gu:નવેમ્બર ૯]]
 [[gv:9 Mee Houney]]
 [[he:9 בנובמבר]]
-[[hi:९ नवंबर]]
+[[hi:९ नवम्बर]]
 [[hif:9 November]]
 [[hr:9. studenog]]
 [[ht:9 novanm]]
@@ -93,7 +94,6 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''9 november'''
 [[myv:Сундерьковонь 9 чи]]
 [[nah:Tlamahtlāccēti 9]]
 [[nap:9 'e nuvembre]]
-[[nds:9. November]]
 [[nl:9 november]]
 [[nn:9. november]]
 [[no:9. november]]
