[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Scharpenzeel_(Frieslaand).mw
+++ b/Scharpenzeel_(Frieslaand).mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Map NL Weststellingwerf Skerpenseel.png|thumb|300px|Ligging van Scharpenzeel]]
-'''Scharpenzeel''' (ok wel: ''Scharpenziel'', [[Nederlaands|Nederlaans]]: ''Scherpenzeel'', [[Fries]]: ''Skerpenseel'') is een [[dörp]] in [[Frieslaand]], tegenswoordig vaalt et onder de gemiente [[Weststellingwarf]]. Et leit in et zuudwesten van [[Wolvege]], an de N351, tussen Wolvege en [[De Kuunder]], en et het omdebi'j 450 inwoners (2006).
+'''Scharpenzeel''' (ok wel: ''Scharpenziel'', [[Nederlaands|Nederlaans]]: ''Scherpenzeel'', [[Westlaauwers Frais|Fries]]: ''Skerpenseel'') is een [[dörp]] in [[Frieslaand]], tegenswoordig vaalt et onder de gemiente [[Weststellingwarf]]. Et leit in et zuudwesten van [[Wolvege]], an de N351, tussen Wolvege en [[De Kuunder]], en et het omdebi'j 450 inwoners (2006).
 
 ==Bekende Scharpenzeelsters==
 *Scharpenzeel wodt vaeke nuumd as et geboorteplak van [[Pieter Stuyvesant]], stichter van [[Ni'j-Amsterdam]] (vandaegededag: [[Ni'j-York]]).
