--- a/Peperge.mw
+++ b/Peperge.mw
@@ -1,5 +1,5 @@
 [[Ofbeelding:Map NL Weststellingwerf Pepergea.png|thumb|300px|Ligging van Peperge]]
-'''Peperge''' (ok wel: ''Pepergao'', [[Nederlaands|Nederlaans]]: ''Peperga'', [[Fries]]: ''Pepergea'') is een plak in de [[Frieslaand|Friese]] gemiente [[Weststellingwarf]]. Et leit in et zuudoosten van [[Wolvege]], an de A32, tussen Wolvege en [[Stienwiek]], en het omdebi'j 90 inwoners (2008).
+'''Peperge''' (ok wel: ''Pepergao'', [[Nederlaands|Nederlaans]]: ''Peperga'', [[Westlaauwers Frais|Fries]]: ''Pepergea'') is een plak in de [[Frieslaand|Friese]] gemiente [[Weststellingwarf]]. Et leit in et zuudoosten van [[Wolvege]], an de A32, tussen Wolvege en [[Stienwiek]], en het omdebi'j 90 inwoners (2008).
 
 Peperge en [[De Blesse]] liggen vlakbi'j mekeer en hebben tegere een dörpsverieniging Plaatselijk Belang De Blesse - Peperge “tot Nut en Genoegen”, opricht op [[10 december]] [[1864]].
 
