--- a/Kuunder_(revier).mw
+++ b/Kuunder_(revier).mw
@@ -1,6 +1,6 @@
-[[Ofbeelding:Sluis Tjonger 03.JPG|thumb|right|250px|Slusien in de Kuunder]]
-[[Ofbeelding:De Tjongermolen Mildam 07.JPG|thumb|right|250px|De Kuundermeulen bi'j [[Mildam]]]]
-De '''Kuunder''' ([[Nederlaands|Nederlaans]]: ''Tjonger'' of ''Kuinder'', [[Fries]]: ''Tsjonger'') is een [[revier]]tien dat kotbi'j de [[Drenthe|Drentse]] greens leit, et lopt van zuudoost naor zuud-[[Frieslaand]]. Vrogger mondde de Kuunder uut in de [[Zuderzee]] bi'j et [[Oaveriessel|Overiesselse]] plakkien [[De Kuunder (Stienwiekerlaand)|De Kuunder]]. Deur de anleg van de [[Ofsluutdiek]] en de [[Noordoostpolder|Noordoostpoolder]] is de monding blokkeerd. Waeter uut de Kuunder komt sund die tied tot ofvoer via de [[Friese boezem]], onder aandere deur de spuisluzen in [[Harlingen]] en et [[J.L. Hooglandgemael]] bi'j [[Stavoren]].
+[[Ofbeelding:Sluis Tjonger 03.JPG|thumb|right|Slusien in de Kuunder]]
+[[Ofbeelding:De Tjongermolen Mildam 07.JPG|thumb|right|De Kuundermeulen bi'j [[Mildam]]]]
+De '''Kuunder''' ([[Nederlaands|Nederlaans]]: ''Tjonger'' of ''Kuinder'', [[Westlaauwers Frais|Fries]]: ''Tsjonger'') is een [[revier]]tien dat kotbi'j de [[Drenthe|Drentse]] greens leit, et lopt van zuudoost naor zuud-[[Frieslaand]]. Vrogger mondde de Kuunder uut in de [[Zuderzee]] bi'j et [[Oaveriessel|Overiesselse]] plakkien [[De Kuunder (Stienwiekerlaand)|De Kuunder]]. Deur de anleg van de [[Ofsluutdiek]] en de [[Noordoostpolder|Noordoostpoolder]] is de monding blokkeerd. Waeter uut de Kuunder komt sund die tied tot ofvoer via de [[Friese boezem]], onder aandere deur de spuisluzen in [[Harlingen]] en et [[J.L. Hooglandgemael]] bi'j [[Stavoren]].
 
 An et aende van de [[19e eeuw|19e ieuw]] (in [[1886]] tot [[1888]] um percies te wezen) is et middenste diel van de Kuunder kanaliseerd over een lengte van 35 kilemeter, veur de bevordering van de scheepvaort en de ontwaetering. Tegensworig wodt dan ok vaeke spreuken van et Kuunderkenaol. Behalven een peer schiere meanders die isoleerd in netuurterreinen liggen, is der van de oorspronkelik kronkelige weg min overbleven. In et noorden van de oorspronkelike Kuunder liggen hier en daor revierduunties, waorvan de "Kiekenbarg" bi'j [[Ooldhorne]] de schierste is.
 
