[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Lemsterlaand.mw
+++ b/Lemsterlaand.mw
@@ -20,7 +20,7 @@ webstee = [http://www.lemsterland.nl www.lemsterland.nl] |
 }}
 '''Lemsterlaand''' ([[Freesk|Fries]]: ''Lemsterlân'') is een [[Frieslaand|Friese]] [[gemiente (bestuur)|gemiente]] mit 13.477 inwoners<ref>Per 1 augustus 2006, bron: Centraal Bureau voor de Statistiek</ref> en een oppervlakte van 124,37 [[vierkaante kilometer|km²]], waorvan 47,70 km² waeter.
 
-Tot omdebi'j de [[1970-1979|jaoren 70]] van de [[20e eeuw|20e ieuw]] leup de taelgreens tussen [[Fries]] en [[Stellingwarfs]] deur de gemiente. Et Stellingwarfs (''krûmme'') wodde introduceerd deur kelonisaosie van [[Gietern|Gieterse]] verveners omenbi'j [[1800]]. In de oostelike helte wodde Stellingwarfs naost de Friese tael bruukt. Daornao is ok dit gebied verfriest. Et Stellingwarfs wodt hier now minnig meer bruukt.
+Tot omdebi'j de [[1970-1979|jaoren 70]] van de [[20e eeuw|20e ieuw]] leup de taelgreens tussen [[Westlaauwers Frais|Fries]] en [[Stellingwarfs]] deur de gemiente. Et Stellingwarfs (''krûmme'') wodde introduceerd deur kelonisaosie van [[Gietern|Gieterse]] verveners omenbi'j [[1800]]. In de oostelike helte wodde Stellingwarfs naost de Friese tael bruukt. Daornao is ok dit gebied verfriest. Et Stellingwarfs wodt hier now minnig meer bruukt.
 
 Et [[Ir. D.F. Woudagemaal]] in et heufdplak [[De Lemmer]] staot op 'e liest van [[wereldarfgoed]] van [[UNESCO]].
  
