--- a/Wooldfries.mw
+++ b/Wooldfries.mw
@@ -39,7 +39,7 @@
 |et [[Latainse alfabet|Latiens alfabet]]
 |-
 |Taelstaotus
-|et Wooldfries is een dialekt van et [[Fries]]; gien erkenning
+|et Wooldfries is een dialekt van et [[Westlaauwers Frais|Fries]]; gien erkenning
 |-
 |Taelkode ISO 639-1
 |n.v.t.
@@ -51,14 +51,14 @@
 |n.v.t.
 |}
 
-Et '''Wooldfries''' is ien van de vier grote dialekten van et [[Freesk|Fries]] en wodt praot in de [[Friese Woolden]] in et oostelike diel van de perveensie [[Frieslaand]], roegweg tussen [[Dokkum]] in et noorden, [[Liwwadden]], de [[Oolde Venen]] en [[Et Vene]] in et westen en de [[Stellingwarven]] in et zuden. In et oosten lopt et tot an de greens mit [[Grunnen (provinzie)|Grunningen]] en [[Drenthe]], tussen [[Surhuustervene]] en [[Friesepaolen]], waant hier lopt et Wooldfriese taelgebied deur de perveensie [[Grunnen (provinzie)|Grunningen]] in de driehoek [[Moarum|Marum]]-[[De Wilp]]-[[De Penne|Eupende]].
+Et '''Wooldfries''' is ien van de vier grote dialekten van et [[Freesk|Fries]] en wodt praot in de [[Friese Woolden]] in et oostelike diel van de perveensie [[Frieslaand]], roegweg tussen [[Dokkum]] in et noorden, [[Liwwadden]], de [[Oolde Venen]] en [[Et Vene]] in et westen en de [[Stellingwarven]] in et zuden. In et oosten lopt et tot an de greens mit [[Grunnen (provinzie)|Grunningen]] en [[Drenthe]], tussen [[Surhuustervene]] en [[Friesepaolen]], waant hier lopt et Wooldfriese taelgebied deur de perveensie Grunningen in de driehoek [[Moarum|Marum]]-[[De Wilp]]-[[De Penne|Eupende]].
 
-Et Wooldfries dankt zien naeme an et feit dat zi'j in et oosten van [[Frieslaand]] boomringen gebruukte om ofscheidings tussen greiden te maeken. In et westen en noordoosten van de perveensie wodden hierveur sleuten anlegd, in de Woolden is de grond gloepend zaanderig en hier zakt et waeter rap in vot.
+Et Wooldfries dankt zien naeme an et feit dat zi'j in et oosten van Frieslaand boomringen gebruukte om ofscheidings tussen greiden te maeken. In et westen en noordoosten van de perveensie wodden hierveur sleuten anlegd, in de Woolden is de grond gloepend zaanderig en hier zakt et waeter rap in vot.
 
-Et Wooldfries wodt praot deur naor schatting zoen 157.000 meensken in de perveensie [[Frieslaand]] en de driehoek [[Moarum|Marum]]-[[De Wilp]]-[[De Penne|Eupende]] in et angreenzende diel van de perveensie [[Grunnen (provinzie)|Grunningen]]; hoeveul [[Friezen]] daorbuten Wooldfries praoten is niet bekend. 
+Et Wooldfries wodt praot deur naor schatting zoen 157.000 meensken in de perveensie Frieslaand en de driehoek [[Moarum|Marum]]-[[De Wilp]]-[[De Penne|Eupende]] in et angreenzende diel van de perveensie Grunningen; hoeveul [[Friezen]] daorbuten Wooldfries praoten is niet bekend. 
 
 == Verschillen tussen Wooldfries en Kleifries ==
-De verschillen tussen et Wooldfries, et [[Kleifries]], en de aandere grote [[Freesk|Friese]] dialekten, bin zo klein da'j et haost gien dialekt numen kan, een betere naeme hierveur is "taelvariaant". Ok al bin d'r een antal in et oog springende verschillen (althans veur Friezen) zowel op fonologisch as lexikaol gebied.
+De verschillen tussen et Wooldfries, et [[Kleifries]], en de aandere grote [[Westlaauwers Frais|Friese]] dialekten, bin zo klein da'j et haost gien dialekt numen kan, een betere naeme hierveur is "taelvariaant". Ok al bin d'r een antal in et oog springende verschillen (althans veur Friezen) zowel op fonologisch as lexikaol gebied.
 
 === Fonologische verschillen ===
 Et grootste verschil tussen et Wooldfries en et [[Kleifries]] bin de woorden "my", "dy", "hy", "sy", "wy" en "by", die in et Wooldfries uutspreuken wodden as "mi", "di", "hi", "si", "wi" en "bi" en in et [[Kleifries]] as "mij", "dij", "hij", "sij", "wij" en "bij".
