--- a/Haulerwiek.mw
+++ b/Haulerwiek.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Eaststellingwerf Haulerwyk.png|thumb|300px|Haulerwiek]]
-'''Haulerwiek''' ([[Nederlaands|Nederlaans]]: ''Haulerwijk'', [[Fries]]: ''Haulerwyk'') is een dörp in de gemiente [[Ooststellingwarf]].
+[[Ofbeelding:Map NL Eaststellingwerf Haulerwyk.png|thumb|Haulerwiek]]
+'''Haulerwiek''' ([[Nederlaands|Nederlaans]]: ''Haulerwijk'', [[Westlaauwers Frais|Fries]]: ''Haulerwyk'') is een dörp in de gemiente [[Ooststellingwarf]].
 
 Haulerwiek leit in [[Frieslaand]] vlakbi'j de greens mit [[Grunnen (provinzie)|Grunningen]] en [[Drenthe]]. Et dörp had op 1 jannewaori 2006 omdebi'j 3.309 inwoners.
 
