[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Ofsluutdiek.mw
+++ b/Ofsluutdiek.mw
@@ -15,7 +15,7 @@ Zee hef veurstellen edaon um de diek, en een kwak aandere dieken, waoterkeringen
 == Ofsluutdiek in aandere talen ==
 * [[Nederlaands|Nederlaans]]: ''Afsluitdijk''
 * [[Afrikaans]]: ''Afsluitdyk''
-* [[Fries]]: ''Ofslútdyk''
+* [[Westlaauwers Frais|Fries]]: ''Ofslútdyk''
 * [[Platduuts]]: ''Afslussdiek''
 * [[Duuts]]: ''Abschlussdeich''
 
