[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Vinkege.mw
+++ b/Vinkege.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Weststellingwerf Finkegea.png|thumb|300px|Ligging van Vinkege]] 
-'''Vinkege''' (ok wel: ''Vinkegao'', [[Nederlaands|Nederlaans]]: ''Vinkega'', [[Fries]]: ''Finkegea'') is een dörp in de [[Frieslaand|Friese]] gemiente [[Weststellingwarf]], in et oosten van [[Wolvege]] en in et zuudwesten van [[Noordwoolde]]. Et dörp het zoe'n 200 inwoners (2006).
+[[Ofbeelding:Map NL Weststellingwerf Finkegea.png|thumb|Ligging van Vinkege]] 
+'''Vinkege''' (ok wel: ''Vinkegao'', [[Nederlaands|Nederlaans]]: ''Vinkega'', [[Westlaauwers Frais|Fries]]: ''Finkegea'') is een dörp in de [[Frieslaand|Friese]] gemiente [[Weststellingwarf]], in et oosten van [[Wolvege]] en in et zuudwesten van [[Noordwoolde]]. Et dörp het zoe'n 200 inwoners (2006).
 
 {{Weststellingwarf}}
 
