[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Raevenswoold.mw
+++ b/Raevenswoold.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Eaststellingwerf Ravenswâld.png|thumb|300px|right|Raevenswoold]]
-'''Raevenswoold''' ([[Nederlaands|Nederlaans]]: ''Ravenswoud'', [[Fries]]: ''Ravenswâld'') is een dörp in de [[Frieslaand|Friese]] [[gemiente (bestuur)|gemiente]] [[Ooststellingwarf]] in [[Nederlaand]]. Et leit in et oosten van [[Oosterwoolde]] en in et noordoosten van [[Appelsche]]. Et dörp had begin 2006 zoe'n 419 inwoners.
+[[Ofbeelding:Map NL Eaststellingwerf Ravenswâld.png|thumb|right|Raevenswoold]]
+'''Raevenswoold''' ([[Nederlaands|Nederlaans]]: ''Ravenswoud'', [[Westlaauwers Frais|Fries]]: ''Ravenswâld'') is een dörp in de [[Frieslaand|Friese]] [[gemiente (bestuur)|gemiente]] [[Ooststellingwarf]] in [[Nederlaand]]. Et leit in et oosten van [[Oosterwoolde]] en in et noordoosten van [[Appelsche]]. Et dörp had begin 2006 zoe'n 419 inwoners.
 
 ==Uutgaonde verwiezing==
 * [http://www.ravenswoud.nl/ Webstee Raevenswoold]
