--- a/Doempien.mw
+++ b/Doempien.mw
@@ -1,13 +1,13 @@
-[[Ofbeelding:Troglodyte-sylvain haye.jpg|thumb|250px|Et doempien]]
-[[Ofbeelding:Wren.JPG|thumb|250px|Een schets van et doempien]]
-[[Ofbeelding:Troglodytes troglodytes(loz).jpg|thumb|250px|Een ofbeelding van et doempien]]
-[[Ofbeelding:Zaunkoenig.jpg|thumb|250px|Schets van een nust van et doempien]]
+[[Ofbeelding:Troglodyte-sylvain haye.jpg|thumb|Et doempien]]
+[[Ofbeelding:Wren.JPG|thumb|Een schets van et doempien]]
+[[Ofbeelding:Troglodytes troglodytes(loz).jpg|thumb|Een ofbeelding van et doempien]]
+[[Ofbeelding:Zaunkoenig.jpg|thumb|Schets van een nust van et doempien]]
 Et '''doempien''' ([[Latien]]: ''Troglodytes troglodytes'') is de ienigste [[Europa (continent)|Europese]] [[Troglodytidae|winterkeuningsoorte]]. Et is een klein drongen [[voegel]]tien van omdebi'j tien centimeter mit een opwipt stattien. Hi'j beheurt tot een femilie waorvan alle aandere soorten uutslutend in [[Ni'je Wereld|Amerike]] veurkommen, mar disse soorte is over et grootste diel van [[Eurazië]] verspreid. Et doempien is now iene van de meerst algemiene voegelsoorten, omdat hi'j him anpast het an liekegoed bosrieke as eupen gebieden. 
 
 Doempies eten veurnaemelik [[insektn|insekten]] en [[spinnen]], mar ze eten altemet ok wel [[zaod]]en van kleine plaanties. Zien zanggeluud is helder, en het vibrerende scharpe trillers. Et Doempien is ien van de kleinste voegelsoorten van [[Europa (continent)|Europa]] en kan vanwegen zien kotte vleugels niet zo best vliegen. Hi'j is zoe'n 9,5 centimeter laank en weegt omdebi'j 10 gram. Liekegoed et mannetien as et wiefien hebben brune veren. De opvalende stat staot recht omhoge.
 
 == Aandere benaemings ==
-In et [[Stellingwarfs]] wodt et doempien ok wel een ''moskeuning'', ''ossekeuning'', ''otskeuninkien'', ''winterkeuninkien'' of een ''tuunkroeper'' nuumd, mar de meerstbruukte benaeming is toch wel ''doempien'', dat weer wat weg het van de [[Fries]]e benaeming ''tomke''. 
+In et [[Stellingwarfs]] wodt et doempien ok wel een ''moskeuning'', ''ossekeuning'', ''otskeuninkien'', ''winterkeuninkien'' of een ''tuunkroeper'' nuumd, mar de meerstbruukte benaeming is toch wel ''doempien'', dat weer wat weg het van de [[Westlaauwers Frais|Fries]]e benaeming ''tomke''. 
 
 == Verspreiding ==
 Et Doempien is meerstal te vienen in dichte struken veural in de buurte van [[woater|waeter]]. Hi'j komt op et [[noordelijk halfroend|noordelike halfrond]] haost overal veur. In Eurazië kommen zoe'n 27 ondersoorten veur en in Amerike bin d'r nog zoe'n 12 ondersoorten.
