[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Wymbritserediel.mw
+++ b/Wymbritserediel.mw
@@ -18,7 +18,7 @@ netnummer = 0514, 0515 |
 postkode = 8529 - 8774 |
 webstee = [http://www.wymbritseradiel.nl www.wymbritseradiel.nl] |
 }}
-'''Wymbritserediel''' ([[Nederlaands|Nederlaans]]: ''Wymbritseradeel'', [[Fries]]: ''Wymbritseradiel'') is een plattelaansgemiente in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]] die in een hoefiezervorm rond de gemiente [[Sneek (gemiente)|Sneek]] legen is. De gemiente had op [[1 juli]] [[2006]] 16.137 inwoners (bron: CBS). Et heufdplak is [[Ielst (stad)|Ielst]]. In de volksmond wodt vaeke praot over ''Wymbrits''.
+'''Wymbritserediel''' ([[Nederlaands|Nederlaans]]: ''Wymbritseradeel'', [[Westlaauwers Frais|Fries]]: ''Wymbritseradiel'') is een plattelaansgemiente in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]] die in een hoefiezervorm rond de gemiente [[Sneek (gemiente)|Sneek]] legen is. De gemiente had op [[1 juli]] [[2006]] 16.137 inwoners (bron: CBS). Et heufdplak is [[Ielst (stad)|Ielst]]. In de volksmond wodt vaeke praot over ''Wymbrits''.
 
 == Ontstaon ==
 De gemiente Wymbritserediel is nao de gemientelike herindieling van [[1 jannewaori]] [[1984]] vormd deur de fusie mit de veurmaolige gemienten [[Ielst (gemiente)|Ielst]], [[Wymbritserediel (veurmaolige gemiente)|Wymbritserediel]] en inkelde dielen van [[Woonserediel]] mit de dörpies [[Kouferderrige]] en [[Smallebrogge]] en van [[Doniawerstal]] mit et dörp [[Greonterp]].
