[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Scharsterlaand.mw
+++ b/Scharsterlaand.mw
@@ -19,7 +19,7 @@
 | webstee = [http://www.skarsterlan.nl www.skarsterlan.nl]
 }}
 [[Ofbeelding:Joure_5.79929E_52.96982N.jpg|thumb|right|400px|Satellietfoto van Scharsterlaand en omkrieten]]
-'''Scharsterlaand''' ([[Nederlaands|Nederlaans]]: ''Scharsterland'', [[Fries]]: ''Skarsterlân'') is een gemiente in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]], 't had op [[1 febrewaori]] [[2008]] zoe'n 27.110 inwoners en een oppervlakte van 216,89 [[vierkaante kilemeter|km²]].
+'''Scharsterlaand''' ([[Nederlaands|Nederlaans]]: ''Scharsterland'', [[Westlaauwers Frais|Fries]]: ''Skarsterlân'') is een gemiente in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]], 't had op [[1 febrewaori]] [[2008]] zoe'n 27.110 inwoners en een oppervlakte van 216,89 [[vierkaante kilemeter|km²]].
 
 Scharsterlaand is nao de [[gemientelike herindieling]] in [[1984]] vormd deur de fusie mit de gemienten [[Doniawerstal]] en [[Haskerlaand]] en een diel van [[Utingerediel]] mit de dörpen [[Akmariep]] en [[Terkaple]].
 
