[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]]); neet nog es linken as dat net doarveur ok edoen waar

--- a/Baas_Boppe_Baas.mw
+++ b/Baas_Boppe_Baas.mw
@@ -1,4 +1,4 @@
-'''Baas Boppe Baas''' ([[Fries]] veur: ''baos boven baos'') was een [[Fries]]e [[regiosoap|dramaserie]] van bedaenker en regisseur [[Steven de Jong]]. Van [[2001]] tot [[2005]] wodde de serie, bestaonde uut ofleverings van 30 menuten, uutzunnen deur [[Omrop Fryslân]]. 
+'''Baas Boppe Baas''' ([[Westlaauwers Frais|Fries]] veur: ''baos boven baos'') was een Friese [[regiosoap|dramaserie]] van bedaenker en regisseur [[Steven de Jong]]. Van [[2001]] tot [[2005]] wodde de serie, bestaonde uut ofleverings van 30 menuten, uutzunnen deur [[Omrop Fryslân]]. 
 
 Baas Boppe Baas gong over de konservatieve ''pater familias'' Beant Baas (espeuld deur: Rense Westra) en zien meer veuruutstrevende femilie. Beant het roggeklachten en zit in de WAO. Hi'j is wel aktief as heufdredakteur en [[kolumnist]] van de [[krante|dörpskraante]]. Beant is trouwd mit Joukje (espeuld deur: Hilly Harms).
 
