--- a/De_Lemmer.mw
+++ b/De_Lemmer.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Holland_Lemmer_2004_073.jpg|200px|thumb|250px|De Lemmer]]
-'''De Lemmer''' ([[Nederlaands|Nederlaans]]: ''Lemmer'' [[Fries]]: ''De Lemmer'') is een dörp in de gemiente [[Lemsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et is ien van Frieslaans bekendste [[waetersport]]plakken. Et dörp De Lemmer het omdebi'j 10.000 inwoners, de gemiente Lemsterlaand zoe'n 14.000.
+[[Ofbeelding:Holland_Lemmer_2004_073.jpg|thumb|De Lemmer]]
+'''De Lemmer''' ([[Nederlaands|Nederlaans]]: ''Lemmer'' [[Westlaauwers Frais|Fries]]: ''De Lemmer'') is een dörp in de gemiente [[Lemsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et is ien van Frieslaans bekendste [[waetersport]]plakken. Et dörp De Lemmer het omdebi'j 10.000 inwoners, de gemiente Lemsterlaand zoe'n 14.000.
 
 De Lemmer is ok bekend as woonplak van [[Rintje Ritsma]]. In [[Tacoziel]], kotbi'j De Lemmer, leit et Ir. D.F. Woudagemaal, et grootste stoomgemael dat ooit bouwd is, en dat in [[1998]] op de [[Wereldarfgoed]]liest zet wodde. De [[Lemster aak]] (een tredisioneel zeilschip) is ofkomstig uut De Lemmer. ''De Groene Draak'', et zeilschip van [[Beatrix van Nederlaand|keuningin Beatrix]], is een Lemster aak. 
 
@@ -16,6 +16,7 @@ Image:Holland_Lemmer_2004_092.jpg
 Image:Holland_Lemmer_2004_101.jpg
 Image:Holland_Lemmer_2004_097.jpg
 </gallery>
+{{commonscat|Lemmer}}
 
 [[Kattegerie:Stellingwarfs artikel]]
 [[Kattegerie:Plak in Frieslaand]]
