--- a/Oosterzee.mw
+++ b/Oosterzee.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Lemsterlân Eastersee.png|thumb|300px|Oosterzee]]
-'''Oosterzee''' ([[Fries]]: ''Eastersee'') is een dörp in de [[Frieslaand|Friese]] gemiente [[Lemsterlaand]], mit omdebi'j 460 inwoners ([[1 jannewaori]] [[2004]]). Oosterzee leit in et zuudoosten van de [[Nederlaand|Nederlaanse]] [[perveensie]] [[Frieslaand]].  
+[[Ofbeelding:Map NL Lemsterlân Eastersee.png|thumb|Oosterzee]]
+'''Oosterzee''' ([[Westlaauwers Frais|Fries]]: ''Eastersee'') is een dörp in de [[Frieslaand|Friese]] gemiente [[Lemsterlaand]], mit omdebi'j 460 inwoners ([[1 jannewaori]] [[2004]]). Oosterzee leit in et zuudoosten van de [[Nederlaand|Nederlaanse]] [[perveensie]] [[Frieslaand]].  
 
 Oosterzee is een klein dörpien mit omdebi'j 900 inwoners et leit an et grootste meer van Frieslaand, et [[Tjeukemeer]].
 
