--- a/Eesterge.mw
+++ b/Eesterge.mw
@@ -1,4 +1,4 @@
-'''Eesterge''' ([[Fries]]: ''Jistergea'', [[Nederlaands|Nederlaans]]: ''Eesterga'') is een dörp in de gemiente [[Lemsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et noorden van [[De Lemmer]] en in et westen van [[Oosterzee]]. Eesterge had op [[1 jannewaori]] [[2004]] omdebi'j 210 inwoners. Et buurdörp van Eesterge is [[Follege]].
+'''Eesterge''' ([[Westlaauwers Frais|Fries]]: ''Jistergea'', [[Nederlaands|Nederlaans]]: ''Eesterga'') is een dörp in de gemiente [[Lemsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit in et noorden van [[De Lemmer]] en in et westen van [[Oosterzee]]. Eesterge had op [[1 jannewaori]] [[2004]] omdebi'j 210 inwoners. Et buurdörp van Eesterge is [[Follege]].
 
 D'r het een karke staon, die liekewel rond [[1740]] ofbreuken is. Op et [[begreefplak]] staot ok ien van de klokkestoelen in Frieslaand.
 
