--- a/Stadsfries.mw
+++ b/Stadsfries.mw
@@ -41,9 +41,9 @@
 |n.v.t.
 |}
 [[Image:Stadsfries.gif|thumb|285px|Omkrieten waor et Stadsfries praot wodt]]
-'''Stadsfries''' ('''Stadsfrys''' in et dialekt zels, '''Stedsk''' in et [[Fries]] en '''Liwwarders''' in Liwwadden) is de saemenvattende naeme van de stadsdialekten die in Friese steden en grote plakken [[Liwwadden (stad)|Liwwadden]], [[Sneek (stad)|Sneek]], [[Bolsward]], [[Franeker]], [[Dokkum]], [[Harlingen (stad)|Harlingen]], [[Stavoren]] en tegensworig ok (weer) in [[Et Vene (plak)|Et Vene]] praot wodden. Op taelkundige gronden bin ok et [[Midslaand|Midslaans]], et [[Amelaans]], et [[Et Bildt|Bildts]] en et [[Kollum|Kollummers]] verwaant an et Stadsfries. Pattie taelkundigen rekenen disse dialekten tegere mit et [[Westfries]] van [[Westfrieslaand]], [[Tessel]] en [[Vlielaand]] tot et [[Friso-Frankisch]].
+'''Stadsfries''' ('''Stadsfrys''' in et dialekt zels, '''Stedsk''' in et [[Westlaauwers Frais|Fries]] en '''Liwwarders''' in Liwwadden) is de saemenvattende naeme van de stadsdialekten die in Friese steden en grote plakken [[Liwwadden (stad)|Liwwadden]], [[Sneek (stad)|Sneek]], [[Bolsward]], [[Franeker]], [[Dokkum]], [[Harlingen (stad)|Harlingen]], [[Stavoren]] en tegensworig ok (weer) in [[Et Vene (plak)|Et Vene]] praot wodden. Op taelkundige gronden bin ok et [[Midslaand|Midslaans]], et [[Amelaans]], et [[Et Bildt|Bildts]] en et [[Kollum|Kollummers]] verwaant an et Stadsfries. Pattie taelkundigen rekenen disse dialekten tegere mit et [[Westfries]] van [[Westfrieslaand]], [[Tessel]] en [[Vlielaand]] tot et [[Friso-Frankisch]].
 
-De naeme ''Stadsfries'' moet niet al te letterlik zien wodden: veural in de woordeschat is de tael veural [[Nederlaands|Nederlaans]]. Et Stadsfries is naemelik in de [[16e eeuw]] ontstaon doe [[Frieslaand]] zien bestuurlike zelsstaandighied verleur. In de grotere Friese steden ontston doe de noodzaeke Nederlaans te leren. Et uutaendelike risseltaot was een mingtael mit een grotendiels [[Hollaans (dialekt)|Hollaanse]] woordeschat en veurnaemelik Friese taelprincipes. Butendat is et [[Fries]] van et omringende plattelaand sund die tied stark evolueerd, zodat et Stadsfries nog veul meer van et mederne Fries as van et [[Ooldfries]] ofwiekt.
+De naeme ''Stadsfries'' moet niet al te letterlik zien wodden: veural in de woordeschat is de tael veural [[Nederlaands|Nederlaans]]. Et Stadsfries is naemelik in de [[16e eeuw]] ontstaon doe [[Frieslaand]] zien bestuurlike zelsstaandighied verleur. In de grotere Friese steden ontston doe de noodzaeke Nederlaans te leren. Et uutaendelike risseltaot was een mingtael mit een grotendiels [[Hollaans (dialekt)|Hollaanse]] woordeschat en veurnaemelik Friese taelprincipes. Butendat is et [[Westlaauwers Frais|Fries]] van et omringende plattelaand sund die tied stark evolueerd, zodat et Stadsfries nog veul meer van et mederne Fries as van et [[Ooldfries]] ofwiekt.
 
 ==Klaanken==
 In et Stadsfries ontbreken de mederne Frieze twieklaanken ''ie'', ''ue'' en ''uo'', lichtkaans omdat et Fries in de tied dat et Stadsfries an zien opmars begon disse twieklaanken nog niet had. De [[Oold-Germaans]]e begincluster ''sk-'' is zoas in et Fries ''sk-'' bleven (behalven op [[Amelaand]]). Et Stadsfries het gien ''v-'' en ''z-'' an et beginne van een woord, krek zoas in et Fries. De Nederlaanse ''ij'' en ''ui'' is terugge te vienen as ''ie'' en ''uu'' ; mit wissighied is te zeggen dat et Hollaans an et aende van de [[middeleeuwn|middelieuwen]] ok disse klaanken had.
