--- a/Butenpost.mw
+++ b/Butenpost.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Achtkarspelen Bûtenpost.png|250px|thumb|Lekaosie van Butenpost]]
-'''Butenpost''' ([[Fries]]: ''Bûtenpost'', [[Nederlaands|Nederlaans]]: ''Buitenpost'') is een dörp en et heufdplak van de gemiente [[Achtkarspelen]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]].
+[[Ofbeelding:Map NL Achtkarspelen Bûtenpost.png|thumb|Lekaosie van Butenpost]]
+'''Butenpost''' ([[Westlaauwers Frais|Fries]]: ''Bûtenpost'', [[Nederlaands|Nederlaans]]: ''Buitenpost'') is een dörp en et heufdplak van de gemiente [[Achtkarspelen]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]].
 
 '''Antal inwoners deur de jaoren henne per [[1 jannewaori]]:'''
 
