[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Ferwerd.mw
+++ b/Ferwerd.mw
@@ -1,6 +1,6 @@
 [[Ofbeelding:LekaosieFerwerd.png|thumb|Lekaosie Ferwerd]]
 [[Ofbeelding:Ferwertkerk.jpg|thumb|Ferwerd: Vriehof en karke]]
-'''Ferwerd''' ([[Fries]]: ''Ferwert'') is een dörp en et heufplak van de gemiente [[Ferwerderediel]] (''Ferwerderadiel''), perveensie [[Frieslaand]] ([[Nederlaand]]), en het omdebi'j 1.915 inwoners.
+'''Ferwerd''' ([[Westlaauwers Frais|Fries]]: ''Ferwert'') is een dörp en et heufplak van de gemiente [[Ferwerderediel]] (''Ferwerderadiel''), perveensie [[Frieslaand]] ([[Nederlaand]]), en het omdebi'j 1.915 inwoners.
 
 Et dörp leit an de N357 tussen [[Liwwadden (stad)|Liwwadden]] en [[Dokkum]], vlakbi'j de [[Waddenzee]] en in et westen van et terpdörpien [[Hogebeintum]] (''Hegebeintum''). Ferwerd wodt kenmarkt deur een [[15e eeuw|15e ieuwse]] [[karktoren]] en et is de geboorteplak van ien van de bekendste Friese schrievers [[Trinus Riemersma]].
 
