[[Fries]] → [[Westlaauwers Frais|Fries]] ([[Westlaauwers Frais]])

--- a/Menaldum.mw
+++ b/Menaldum.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL Menameradiel Menaam.png|275px|thumb|Lekaosie Menaldum]]
-'''Menaldum''' ([[Fries]]: ''Menaam'') is een dörp en de heufdplak van de gemiente [[Menaldumediel]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et het 2.470 inwoners ([[2004]]).
+[[Ofbeelding:Map NL Menameradiel Menaam.png|thumb|Lekaosie Menaldum]]
+'''Menaldum''' ([[Westlaauwers Frais|Fries]]: ''Menaam'') is een dörp en de heufdplak van de gemiente [[Menaldumediel]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et het 2.470 inwoners ([[2004]]).
 
 Et [[gemientehuus]] is in [[1841]] tot [[1843]] bouwd deur [[architektuur|architekt]] [[Thomas Romein]]. 
 
