--- a/Ni'jehaske_(plak).mw
+++ b/Ni'jehaske_(plak).mw
@@ -1,6 +1,6 @@
-[[Ofbeelding:Map_NL_Skarsterlân_Nijehaske.png|thumb|300px|Ligging van Ni'jehaske]]
-[[Ofbeelding: Nijehaske 03.JPG|thumb|300px|Uutzicht op Ni'jehaske]]
-'''Ni'jehaske''' ([[Nederlaands|Nederlaans]] en [[Fries]]: ''Nijehaske'') is een klein dörpien in et oosten van de gemiente [[Scharsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]], legen an de ''Jousterweg''. In et vleden wodde de naeme van et dörp nog naor et Nederlaans vertaeld as ''Nieuwehaske''. Tegensworig wodt ok in et Nederlaans allienig de Friese vorm nog bruukt.
+[[Ofbeelding:Map_NL_Skarsterlân_Nijehaske.png|thumb|Ligging van Ni'jehaske]]
+[[Ofbeelding: Nijehaske 03.JPG|thumb|Uutzicht op Ni'jehaske]]
+'''Ni'jehaske''' ([[Nederlaands|Nederlaans]] en [[Westlaauwers Frais|Fries]]: ''Nijehaske'') is een klein dörpien in et oosten van de gemiente [[Scharsterlaand]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]], legen an de ''Jousterweg''. In et vleden wodde de naeme van et dörp nog naor et Nederlaans vertaeld as ''Nieuwehaske''. Tegensworig wodt ok in et Nederlaans allienig de Friese vorm nog bruukt.
 
 Ni'jehaske is begonnen as oostelike uutbouw van et ooldere dörp Haske, dat laeter [[Ooldehaske]] gong hieten. Disse twie dörpen vormden et centrum van de veurmaolige gemiente [[Haskerlaand]]. Deur de veenofgreving, die al in de [[16e eeuw|16e ieuw]] bezig was, ontwikkelde et dörp. Doe 200 jaor laeter zogenaemde [[Gietern|Gietersen]] naor et gebied kwammen om vene of te greven, nam et tal inwoners van beide dörpen stark toe.
 
