--- a/15_augustus.mw
+++ b/15_augustus.mw
@@ -11,7 +11,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''15 augustus'''
 * [[1975]] - Militaire coup in [[Bangladesh]].
 
 == Geboren ==
-* [[1981]] - [[Johan van der Veen]], Nederlaanse zanger van de [[Fries]]e band ''[[Twarres]]''.
+* [[1981]] - [[Johan van der Veen]], zanger van de [[Westlaauwers Frais|Fries]]e band ''[[Twarres]]''.
 
 == Uut de tied ==
 * [[1464]] - [[Paus Pius II]] (58)
