--- a/Europeesk_handväst_vöär_streaktalen_of_minderheidstalen.mw
+++ b/Europeesk_handväst_vöär_streaktalen_of_minderheidstalen.mw
@@ -1,7 +1,7 @@
 't '''Europees Haandves veur regionale talen of talen van minderheen''' ([[Engels]]: ''European Charter for Regional or Minority Languages'') is een verdrag dat op [[25 juni]] [[1992]] deur 't Comité van Ministers van de [[Raod van Europa]] vastesteld wönnen en op [[1 meert]] [[1998]] in warking etrejen is. 't Doel van 't Haandves is an d' ene kaante de bescharming en bevordering van regionale talen en talen van minderheen as bedreig onderdeel van 't Europees cultureel arfgoed en an d' aandere kaante sprekers van regionale talen of talen van minderheen de meugelijkheid te biejen disse talen in zowel 't openbaore as persoonlijke leven te gebruken.
 
 == Erkenning van regionale talen in Nederlaand ==
-In [[1996]] hef de Nederlaanse overheid 't [[Nedersaksisch]] op-egeven onder deel II van 't Haandves. Oek bin 't [[Jiddisch]] en [[Romani]] as neet-terretoriale talen erkend. 't [[Fries]] wönnen erkend volgens deel III, waordeur 't bieveurbeeld in overheidsgeschriffen gebruuk mag wonnen. 't [[Limbörgs|Limburgs]] wönnen in [[1997]] asnog erkend as regionale taal.
+In [[1996]] hef de Nederlaanse overheid 't [[Nedersaksisch]] op-egeven onder deel II van 't Haandves. Oek bin 't [[Jiddisch]] en [[Romani]] as neet-terretoriale talen erkend. 't [[Westlaauwers Frais|Fries]] wönnen erkend volgens deel III, waordeur 't bieveurbeeld in overheidsgeschriffen gebruuk mag wonnen. 't [[Limbörgs|Limburgs]] wönnen in [[1997]] asnog erkend as regionale taal.
 
 Een verzeuk um 't [[Zeeuws]] erkend te kriegen as [[Nederlaand|Nederlaans]] vierde regionale taal hef minister van Binnenlaanse Zaken [[Johan Remkes]] in [[2004]] of-ewezen, umdat 't Zeeuws historisch ezien een [[dialekt|dialek]] van 't Nederlaans is. <ref>http://www.vandale.nl/nieuws/taalnieuws/72978</ref> 't Nedersaksisch hef daorintegen, ondanks grote invleujen op en van 't [[Hollaans]]/Nederlaans, zien eigen ontstaonsgeschiedenisse.
 
