--- a/Ni'jehoorn.mw
+++ b/Ni'jehoorn.mw
@@ -1,5 +1,5 @@
-[[Ofbeelding:Map NL It Hearrenfean Nijhoarne.png|thumb|300px|Ni'jehoorn]]
-'''Ni'jehoorn''' of '''Ni'jhoorn''' ([[Nederlaands|Nederlaans]]: ''Nieuwehorne'', [[Fries]]: ''Nijhoarne'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit oostelik van et plak [[Et Vene (plak)|Et Vene]]. Tot de gemientelike herindieling van [[1934]] maekte et, liekas et zusterdörp [[Ooldehoorn]], diel uut van de gemiente [[Schoterlaand]].
+[[Ofbeelding:Map NL It Hearrenfean Nijhoarne.png|thumb|Ni'jehoorn]]
+'''Ni'jehoorn''' of '''Ni'jhoorn''' ([[Nederlaands|Nederlaans]]: ''Nieuwehorne'', [[Westlaauwers Frais|Fries]]: ''Nijhoarne'') is een dörp in de gemiente [[Et Vene (gemiente)|Et Vene]], in de [[Nederlaand|Nederlaanse]] perveensie [[Frieslaand]]. Et leit oostelik van et plak [[Et Vene (plak)|Et Vene]]. Tot de gemientelike herindieling van [[1934]] maekte et, liekas et zusterdörp [[Ooldehoorn]], diel uut van de gemiente [[Schoterlaand]].
 
 ==Schoele, zangkoor== 
 Ni'jehoorn het een eupenbaore legere schoele, [[dörpshuus]] ''De Kiekenhof'', en et zangkoor ''Jan de Roas Sjongers'' dat vernuumd is naor [[Jan de Roos]].
