--- a/Tweants.mw
+++ b/Tweants.mw
@@ -97,6 +97,7 @@ t Vrogere [[Van Deinse Instituut]] (rechtevoort [[TwentseWelle]]) höald zik gan
 *[[Van Jonge Leu en Oale Groond]]
 
 ==Oetgoande verwiezingn==
+*[http://www.twentsesproak.nl Webstea van de Kreenk vuur de Tweantse Sproake]
 *[http://members.home.nl/dialexicon/index.htm Gratis Weurdebook Tweants-Nederlaands]
 *[http://members.home.nl/goaitsen/dnt/index.htm De Nieje Tied - Blad in t plat]
 *[http://members.home.nl/goaitsen/twents/schriefw.htm Standaard Schriefwieze]
